--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "anlinc.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://anlinc.github.io",
+  "homepage": "https://anlinc.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -21,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
